opam-version: "2.0"
synopsis: "Gohttp starter project"
description: "A small starter OCaml project."
maintainer: ["TODO"]
authors: ["TODO"]
license: "MIT"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0"}
  "uri"
  "lwt"
  "tls-lwt"
  "base64"
  "multipart_form-lwt"
  "fmt" {with-test}
  "alcotest" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
