opam-version: "2.0"
synopsis: "Httpg starter project"
description: "A small starter OCaml project."
maintainer: ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
authors: ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
license: "BSD-3-Clause"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0"}
  "uri"
  "eio"
  "eio_main"
  "tls"
  "x509"
  "mirage-crypto-rng"
  "ca-certs"
  "base64"
  "multipart_form"
  "ptime"
  "fmt" {with-test}
  "alcotest" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
